--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "bot.js",
     "author": "William Fu",
     "dependencies": {
-        "discord.io": "^2.5.3",
+        "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
         "winston": "^3.2.1"
     }
 }
